--- a/conversor/Table.ejs
+++ b/conversor/Table.ejs
@@ -6,7 +6,7 @@
     <title>Table</title>
 </head>
 <body>
-   <table>
+   <table border="3">
      <thead>
         <% header.forEach(col =>{ %>
             
